--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js",
+    "UpdateQuotes": "node scraper.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0"
+    "express-rate-limit": "^7.4.0",
+    "nodemon": "^3.1.4"
   }
 }
